--- a/src/ReviewCard/index.css
+++ b/src/ReviewCard/index.css
@@ -1,31 +1,31 @@
-.reviewCard {
+.ReviewCard {
   width: 300px;
   border: 1px solid grey;
 }
-.reviewCard__header {
+.ReviewCard__header {
   display: flex;
 }
-.reviewCard__image {
+.ReviewCard__image {
   width: 70px;
   height: 70px;
   margin: 10px;
 }
-.reviewCard__image img {
+.ReviewCard__image img {
   width: 100%;
   border-radius: 50%;
 }
-.reviewCard__title {
+.ReviewCard__title {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 10px 10px 10px 0;
 }
-.reviewCard__title h3 {
+.ReviewCard__title h3 {
   margin: 0;
 }
-.reviewCard__title p {
+.ReviewCard__title p {
   margin: 0;
 }
-.reviewCard__quote {
+.ReviewCard__quote {
   margin: 0 10px 10px;
 }
