--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,3 +1,12 @@
 .bio .imageWrapper img {
   max-width: 200px;
 }
+.contactButtonsWrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+.linkButtonsWrapper {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 40px 0 40px;
+}
