--- a/src/LabeledButton/index.css
+++ b/src/LabeledButton/index.css
@@ -13,7 +13,7 @@
   justify-content: center;
   width: 70px;
   height: 70px;
-  border: solid grey 1px;
+  border: solid #957C48 1px;
   border-radius: 50%;
   box-sizing: border-box;
 }
