--- a/src/App/index.css
+++ b/src/App/index.css
@@ -24,7 +24,7 @@ h2::after {
 }
 
 .header {
-  padding-top: 20px;
+  padding-top: 40px;
 }
 .header .name {
   font-size: 24px;
@@ -41,7 +41,7 @@ h2::after {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .bio .sideFlourishWrapper {
   display: flex;
@@ -58,7 +58,7 @@ h2::after {
   width: 140px;
   height: 140px;
   border-radius: 50%;
-  border: solid grey 2px;
+  border: solid #B40E1B 2px;
 }
 .bio .imageWrapper img {
   width: 128px;
