--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-p, h1, h2, h3 {
+p,
+h1,
+h2,
+h3 {
   font-weight: 400;
   margin: 0;
+}
+
+body {
+  background-color: #f5eddc;
+  color: #392d13;
+}
+.header .job,
+h2 {
+  color: #b40e1b;
+}
+svg {
+  fill: #B40E1B;
 }
