--- a/src/CardScroll/index.css
+++ b/src/CardScroll/index.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .CardScroll::-webkit-scrollbar {
   display: none;
