--- a/src/App/index.css
+++ b/src/App/index.css
@@ -37,6 +37,18 @@ h2::after {
   margin-top: 6px;
 }
 
+.paraWrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.paraWrapper .para,
+.paraWrapper .question,
+.paraWrapper .answer  {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30em;
+}
+
 .bio {
   display: flex;
   flex-direction: column;
@@ -59,35 +71,33 @@ h2::after {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  border: solid #B40E1B 2px;
+  border: solid #b40e1b 2px;
 }
 .bio .profileImage {
   max-width: 200px;
   padding: 4px;
   border-radius: 50%;
 }
-.bio .text {
-  margin: 10px 20px 0;
+.bio .paraWrapper {
+  margin-top: 15px;
 }
 
-.contact p {
-  margin: 0 20px 0;
-}
 .contact .buttonsWrapper {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 15px;
+  margin: 15px auto 0;
+  max-width: 30em;
 }
 
 .questions h2 {
   margin-bottom: -8px;
 }
 .questions .question {
-  margin: 20px 20px 0;
+  margin-top: 20px;
   font-weight: 700;
 }
 .questions .answer {
-  margin: 6px 20px 0;
+  margin-top: 6px;
 }
 
 .links {
