--- a/src/ReviewCard/index.css
+++ b/src/ReviewCard/index.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10px 10px 10px 0;
+  margin: 10px 10px 0;
 }
 .ReviewCard__title h3 {
   font-size: 16px;
@@ -34,4 +34,35 @@
 .ReviewCard__quote {
   margin: 0 10px 10px;
   font-size: 14px;
+}
+
+@media only screen and (min-width: 1025px) {
+  .ReviewCard {
+    width: 330px;
+  }  
+  .ReviewCard__image {
+    width: 100px;
+    height: 100px;
+    margin: 15px;
+  }
+  .ReviewCard__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 15px 15px 0;
+  }
+  .ReviewCard__title h3 {
+    font-size: 24px;
+    margin: 0;
+  }
+  .ReviewCard__title p {
+    margin: 0;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  .ReviewCard__quote {
+    margin: 0 15px 15px;
+    font-size: 16px;
+  }
 }
